fix: section spacing issue

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -80,7 +80,7 @@ a:hover {
 }
 
 .section-padding {
-    padding: 60px 0;
+    padding: 30px 0;
 
     @include media-query( 767px ) {
         padding: 40px 0;
