--- a/assets/sass/components/_faq.scss
+++ b/assets/sass/components/_faq.scss
@@ -13,10 +13,10 @@
 
   .accordion-button {
     color: $text-color;
-    font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    padding: 10px 30px;
+    padding: 20px 30px;
+    align-items: normal;
   }
 
   .accordion-button:not(.collapsed) {
@@ -35,8 +35,6 @@
   .accordion-body {
     padding-top: 0px;
     color: $text-light-color;
-    font-size: 14px;
-    line-height: 20px;
-    padding: 10px 30px;
+    padding: 0px 30px;
   }
 }
