--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -247,12 +247,6 @@ Version:        1.0.0
 		font-size: 16px;
 	}
 
-	.more-info-desc {
-		p {
-			font-size: 14px;
-			line-height: 20px;
-		}
-	}
 }
 
 
